# NiceODE

./: .gitignore  NCA_demo.ipynb  Untitled-1.ipynb  Untitled-1.py  debug_FO.py  debug_FO_FOCE.py  debug_FO_FOCE_2cmpt.py  debug_FO_FOCE_absorption.py  debug_ci95.py  debug_me_pymc.py  debug_me_pymc_result.ipynb  debug_pymc.py  diffeqs.py  docker-compose.dev.yml  docker-compose.runtime.yml  gitmv.py  hyper_opt_one_cmpt.py  inspec.ipynb  minimal_debug_example.py  model_assesment.py  nca.py  pymc_utils.py  pyproject.toml  readme.md  scratch.ipynb  t_0atDV_max_ode_solver.ipyb  t_0atDV_max_ode_solver.ipynb  t_0atDV_max_ode_solver_pymc copy.ipynb  t_0atDV_max_ode_solver_pymc.ipynb  t_0atDV_max_ode_solver_r copy.ipynb  t_0atDV_max_ode_solver_r.ipynb  utils.py  xarray_scratch.ipynb
.devcontainer/: devcontainer.json  post-start.sh
data/: gem_toy_data.csv  theo_nlmixr2.csv
data/CP1805/: CP1805_conc.csv  CP1805_demog.csv  CP1805_dose.csv
debug/: LICENSE  debug_FO_FOCE.py  debug_FO_FOCE_2cmpt.py  debug_FO_FOCE_absorption.py  debug_ci95.py  debug_cp1805.py  debug_cp1805_FOCE.py  debug_cp1805_gbm.py  debug_customvjp.py  debug_datapipe.py  debug_jax_opt.py  debug_me_pymc.py  debug_me_pymc_cp1805y.py  debug_multiple_hierarchy.py  debug_pknca.r  debug_pymc.py  debug_theoph.py  debug_theoph_pymc.py  gemini_ivp_mre.py  gemini_mre_ivp_compare.py  gemini_mre_jaxoptiftfalse.py  gemini_mre_vjp_debug.py  jax_debug_minimal.py  jax_debug_mre2.py  jax_jvp_mre_corrected.py  jaxopt_mre_gemini.py  readme.md  running_nlmixr.Rmd  test_gemma.py  test_gemma_codegen.py
debug/inner_opt_vjp/: debug_customvjp.py  gemini_mre_customvjp_GNaprrxH.py  gemini_mre_customvjp_GNaprrxH_1.py  gemini_mre_jaxoptiftfalse.py  gemini_mre_vjp_debug.py  jaxopt_mre_gemini.py
examples/: debug_multiple_hierarchy.ipynb  theoph_FO.ipynb  theoph_FOCE_fdx.ipynb  theoph_hierarchical.ipynb
niceode/: diffeqs.py  nca.py
scratch/: gem_demo.py  gem_profile_bounds_example.py  minimal_gem_example_debug copy 2.py  minimal_gem_example_debug copy.py  minimal_gem_example_debug.py  scratch.py
src/niceode/: diffeqs.py  jax_utils.py  mlflow_utils.py  model_assesment.py  model_obj_utils.py  nca.py  pd_templates.py  pymc_utils.py  sympy_utils.py  utils.py
